--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -18,6 +18,8 @@ monitor=,highres,auto,1
  exec-once = nm-applet
  exec-once = hyprpaper
  exec-once = swayidle -w
+ exec-once = ~/.config/hypr/xdg-portal.sh
+ exec-once = dbus-update-activation-environment --systemd --all
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
