--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -134,7 +134,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, rofi -show drun
+bind = $mainMod, R, exec, ~/.config/rofi/scripts/launcher_t5 -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
