--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -20,6 +20,8 @@ monitor=,highres,auto,1
  exec-once = swayidle -w
  exec-once = ~/.config/hypr/xdg-portal.sh
  exec-once = dbus-update-activation-environment --systemd --all
+ exec-once = wl-paste --type text --watch cliphist store #Stores only text data
+ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -34,6 +36,7 @@ input {
     kb_model =
     kb_options = grp:alt_shift_toggle
     kb_rules =
+    repeat_delay = 150
 
     follow_mouse = 1
 
@@ -41,7 +44,7 @@ input {
         natural_scroll = false
     }
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 1.0 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
@@ -133,10 +136,11 @@ bind = $mainMod, Q, exec, wezterm
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, ~/.config/rofi/scripts/launcher_t5 -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, l, movefocus, l
