--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -15,6 +15,7 @@ monitor=,highres,auto,1
 
 # Execute your favorite apps at launch
  exec-once = waybar
+ exec-once = swaync
  exec-once = nm-applet
  exec-once = hyprpaper
  exec-once = swayidle -w
