--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -17,12 +17,15 @@ monitor=,highres,auto,1
  exec-once = waybar
  exec-once = swaync
  exec-once = nm-applet
- exec-once = hyprpaper
+ exec-once = swww init && ~/dotfiles/swww/swww_randomize.sh
+ exec-once = waypaper --restore --random --backend swww
  exec-once = swayidle -w
  exec-once = ~/.config/hypr/xdg-portal.sh
  exec-once = dbus-update-activation-environment --systemd --all
  exec-once = wl-paste --type text --watch cliphist store #Stores only text data
  exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+ exec-once = udiskie &
+ exec-once = swayosd-server
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
