✨ [-] Some styles changed

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/Pictures/taylor-williams-vMLFbB6dmZ0-unsplash.jpg
-preload = ~/Pictures/sid-balachandran-zfbAvm3ocz4-unsplash.jpg
-wallpaper = ,~/Pictures/sid-balachandran-zfbAvm3ocz4-unsplash.jpg
+preload = ~/Pictures/wallpaper.jpg
+preload = ~/Pictures/wallpaper.jpg
+wallpaper = ,~/Pictures/wallpaper.jpg
