--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -17,7 +17,7 @@ monitor=,highres,auto,1
  exec-once = waybar
  exec-once = swaync
  exec-once = nm-applet
- exec-once = swww init && ~/dotfiles/swww/swww_randomize.sh
+ exec-once = swww init && ~/Pictures/bing_wallpaper.jpg
  exec-once = waypaper --restore --random --backend swww
  exec-once = swayidle -w
  exec-once = ~/.config/hypr/xdg-portal.sh
