✨ [-] Zellij config added

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -4,6 +4,7 @@ theme = "catppuccin_macchiato"
 line-number = "relative"
 mouse = false
 auto-completion = true
+auto-format = true
 bufferline = "always"
 idle-timeout = 20
 
