--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -95,7 +95,7 @@ animations {
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = workspaces, 1, 5, default, slidefade 20%
 }
 
 dwindle {
