--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -1,11 +1,3 @@
-[language-server.vscode-html-language-server]
-command = "vscode-html-language-server"
-args = [ "language-server" ]
-
-[[language]]
-name = "html"
-language-servers = [ "vscode-html-language-server", "scls" ]
-
 [language-server.scls]
 command = "simple-completion-language-server"
 
@@ -15,3 +7,43 @@ snippets_first = true
 feature_words = true
 feature_snippets = true
 feature_unicode_input = true
+
+[language-server.vscode-html-language-server]
+command = "vscode-html-language-server"
+args = [ "language-server" ]
+
+[[language]]
+name = "html"
+language-servers = [ "vscode-html-language-server", "tailwindcss-ls", "scls" ]
+
+[[language]]
+name = "php"
+language-servers = [ "intelephense", "scls", "tailwindcss-ls" ]
+
+[[language]]
+name = "css"
+language-servers = [ "vscode-css-language-server", "tailwindcss-ls", "scls" ]
+
+[[language]]
+name = "scss"
+language-servers = [ "vscode-css-language-server", "tailwindcss-ls", "scls" ]
+
+[[language]]
+name = "javascript"
+language-servers = [ "typescript-language-server", "tailwindcss-ls", "scls" ]
+
+[[language]]
+name = "typescript"
+language-servers = [ "typescript-language-server", "tailwindcss-ls", "scls" ]
+
+[[language]]
+name = "tsx"
+language-servers = [ "typescript-language-server", "tailwindcss-ls", "scls" ]
+
+[[language]]
+name = "jsx"
+language-servers = [ "typescript-language-server", "tailwindcss-ls", "scls" ]
+
+[[language]]
+name = "dockerfile"
+language-servers = [ "docker-langserver", "scls" ]
