--- a/helix/config.toml
+++ b/helix/config.toml
@@ -4,7 +4,6 @@ theme = "catppuccin_macchiato"
 line-number = "relative"
 mouse = false
 auto-completion = true
-completion-replace = true
 auto-format = true
 bufferline = "always"
 idle-timeout = 20
@@ -48,7 +47,7 @@ space = " "
 nbsp = "⍽"
 tab = "→"
 newline = "⏎"
-tabpad = "·"
+tabpad = "→"
 
 [keys.normal."space"]
 w= ":w"
