--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -12,37 +12,63 @@ feature_unicode_input = true
 command = "vscode-html-language-server"
 args = [ "language-server" ]
 
+[language-server.vscode-json-language-server.config]
+json = { validate = { enable = true }, format = { enable = true } }
+provideFormatter = true
+
+[language-server.vscode-css-language-server.config]
+css = { validate = { enable = true } }
+scss = { validate = { enable = true } }
+less = { validate = { enable = true } }
+provideFormatter = true
+
 [[language]]
 name = "html"
 language-servers = [ "vscode-html-language-server", "tailwindcss-ls", "scls" ]
+formatter = { command = 'prettier', args = ["--parser", "html"] }
+auto-format = true
 
 [[language]]
 name = "php"
 language-servers = [ "intelephense", "tailwindcss-ls", "scls" ]
+formatter = { command = 'npx', args = ["prettier", "--plugin", "/usr/lib/node_modules/@prettier/plugin-php/standalone.js"] }
+auto-format = true
 
 [[language]]
 name = "css"
 language-servers = [ "vscode-css-language-server", "tailwindcss-ls", "scls" ]
+formatter = { command = 'prettier', args = ["--parser", "css"] }
+auto-format = true
 
 [[language]]
 name = "scss"
 language-servers = [ "vscode-css-language-server", "tailwindcss-ls", "scls" ]
+formatter = { command = 'prettier', args = ["--parser", "scss"] }
+auto-format = true
 
 [[language]]
 name = "javascript"
 language-servers = [ "typescript-language-server", "tailwindcss-ls", "scls" ]
+formatter = { command = 'prettier', args = ["--parser", "javascript", "--config", ".prettierrc"] }
+auto-format = true
 
 [[language]]
 name = "typescript"
 language-servers = [ "typescript-language-server", "tailwindcss-ls", "scls" ]
+formatter = { command = 'prettier', args = ["--parser", "typescript", "--config", ".prettierrc"] }
+auto-format = true
 
 [[language]]
 name = "tsx"
 language-servers = [ "typescript-language-server", "tailwindcss-ls", "scls" ]
+formatter = { command = 'prettier', args = ["--parser", "typescript", "--config", ".prettierrc"] }
+auto-format = true
 
 [[language]]
 name = "jsx"
 language-servers = [ "typescript-language-server", "tailwindcss-ls", "scls" ]
+formatter = { command = 'prettier', args = ["--parser", "typescript", "--config", ".prettierrc"] }
+auto-format = true
 
 [[language]]
 name = "dockerfile"
