✨ [-] Helix config updated

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -39,7 +39,7 @@ right = ["selections", "primary-selection-length", "position", "position-percent
 
 [editor.whitespace.render]
 space = "none"
-tab = "all"
+tab = "none"
 newline = "none"
 
 [editor.whitespace.characters]
