--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -141,10 +141,10 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, F, togglefloating,
-bind = $mainMod, R, exec, ~/.config/rofi/scripts/launcher_t5 -show drun
+bind = $mainMod, R, exec, ~/.config/rofi/scripts/launcher_t6 -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = SUPER, V, exec, cliphist list | rofi -dmenu -config ~/dotfiles/rofi/themes/rounded-blue-dark.rasi | cliphist decode | wl-copy
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, l, movefocus, l
