✨ [-] Waybar config updated

--- a/waybar/config
+++ b/waybar/config
@@ -173,4 +173,13 @@
         "format-full": " {capacity}%",
         "format-icons": ["󱟢", "󰂄", "󱈏"]
 	},
+    "hyprland/workspaces": {
+        "format": "{icon}",
+        "format-icons": {
+            "1": "",
+            "2": "󰊯",
+            "3": "󱂛",
+            "4": "",
+        }
+    }
 }
