--- a/swayidle/config
+++ b/swayidle/config
@@ -1,3 +1,3 @@
-timeout 60 'swaylock -f -c ~/.config/swaylock/config'
-before-sleep 'swaylock -f -c ~/.config/swaylock/config'
+timeout 60 'hyprlock'
+before-sleep 'hyprlock'
 
