✨ [-] Hyprlock default wallpaper added

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,6 +1,6 @@
 background {
     monitor =
-    path = ~/Pictures/wallpaper1.jpg   # only png supported for now
+    path = ~/Pictures/wallpaper6.png   # only png supported for now
     color = rgb(255, 175, 69)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
