--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -67,3 +67,16 @@ label {
     halign = center
     valign = bottom
 }
+
+# Layout
+label {
+    monitor =
+    text = cmd[update:10] echo "<b><big> $(~/dotfiles/scripts/lang.sh) </big></b>"
+    color = rgb(255, 175, 69)
+    font_size = 16
+    font_family = JetBrains Mono Nerd Font 10
+    position = 0, -60
+    halign = center
+    valign = bottom
+}
+
