🐛 [-] Hyprlock-git added instead of hyprlock due to some bugs

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -57,16 +57,16 @@ label {
 
 
 # Type to unlock
-label {
-    monitor =
-    text = Type to unlock!
-    color = rgb(251, 109, 72)
-    font_size = 16
-    font_family = JetBrains Mono Nerd Font 10
-    position = 0, 30
-    halign = center
-    valign = bottom
-}
+#label {
+#    monitor =
+#    text = Type to unlock!
+#    color = rgb(251, 109, 72)
+#    font_size = 16
+#    font_family = JetBrains Mono Nerd Font 10
+#    position = 0, 30
+#    halign = center
+#    valign = bottom
+#}
 
 # Layout
 label {
