✨ [-] pass script updated

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -140,7 +140,8 @@ $mainMod = SUPER
 bind = $mainMod, Q, exec, wezterm
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, rofi-pass
+bind = $mainMod, E, exec, ~/dotfiles/scripts/pass.sh --type # copy paste username and password
+bind = $mainMod SHIFT, E, exec, ~/dotfiles/scripts/pass.sh # copy password only
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, ~/.config/rofi/scripts/launcher_t6 -show drun
 bind = $mainMod, P, pseudo, # dwindle
