--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,18 +14,19 @@ monitor=,highres,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
- exec-once = waybar
- exec-once = swaync
- exec-once = nm-applet
- # exec-once = swww init && ~/Pictures/bing_wallpaper.jpg
- # exec-once = waypaper --restore --random --backend swww
- exec-once = swayidle -w
- exec-once = ~/.config/hypr/xdg-portal.sh
- exec-once = dbus-update-activation-environment --systemd --all
- exec-once = wl-paste --type text --watch cliphist store #Stores only text data
- exec-once = wl-paste --type image --watch cliphist store #Stores only image data
- exec-once = udiskie &
- exec-once = swayosd-server
+exec-once = waybar
+exec-once = swaync
+exec-once = nm-applet
+# exec-once = swww init && ~/Pictures/bing_wallpaper.jpg
+# exec-once = waypaper --restore --random --backend swww
+exec-once = swayidle -w
+exec-once = ~/.config/hypr/xdg-portal.sh
+exec-once = dbus-update-activation-environment --systemd --all
+exec-once = wl-paste --type text --watch cliphist store #Stores only text data
+exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+exec-once = udiskie &
+exec-once = swayosd-server
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -131,6 +132,7 @@ device {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
